--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
   "name": "pwa",
   "version": "1.0.0",
-  "description": "",
+  "description": "<h1 align=\"center\">J.A.T.E. - Just Another Text Editor</h1>",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start:dev": "concurrently \"cd client && npm run build\" \"cd server && npm run server\" ",
+    "start": "npm run build && cd server && node server.js",
+    "server": "cd server node server.js --ignore client",
+    "build": "cd client && npm run build",
+    "install": "cd client && npm install",
+    "client": "cd client && npm start",
+    "heroku-prebuild": "npm install --dev"
   },
   "repository": {
     "type": "git",
@@ -15,5 +21,13 @@
   "bugs": {
     "url": "https://github.com/mherring11/PWA/issues"
   },
-  "homepage": "https://github.com/mherring11/PWA#readme"
+  "homepage": "https://github.com/mherring11/PWA#readme",
+  "dependencies": {
+    "concurrently": "^7.3.0",
+    "express": "^4.18.1",
+    "nodemon": "^2.0.19"
+  },
+  "devDependencies": {
+    "webpack": "^5.74.0"
+  }
 }
