--- a/package.json
+++ b/package.json
@@ -25,7 +25,11 @@
   "dependencies": {
     "concurrently": "^7.3.0",
     "express": "^4.18.1",
-    "nodemon": "^2.0.19"
+    "html-webpack-plugin": "^5.5.0",
+    "nodemon": "^2.0.19",
+    "webpack-cli": "^4.10.0",
+    "webpack-pwa-manifest": "^4.3.0",
+    "workbox-webpack-plugin": "^6.5.4"
   },
   "devDependencies": {
     "webpack": "^5.74.0"
